fixed overflow and permissions

--- a/client/src/components/buttonSelector/buttonSelector/ButtonSelector.scss
+++ b/client/src/components/buttonSelector/buttonSelector/ButtonSelector.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  overflow-wrap: break-word;
 }
 
 .button-selector-no-stretch {
